--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "draft-js": "^0.11.7",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
